fixed safari overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body,html {
   padding: 0;
   margin: 0;
+  position: relative;
+  height: 100%;
   width: 100%;
   overflow-x: hidden;
   font-family: 'Montserrat', sans-serif;
